--- a/kubernetesdeploy.yaml
+++ b/kubernetesdeploy.yaml
@@ -1,34 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: bankapp-eta-deploy
+  name: bankingappimg-deploy
   labels:
-    app: bankapp-eta-app
+    app: bankingappimg
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: bankapp-eta-app
+      app: bankingappimg
   template:
     metadata:
       labels:
-        app: bankapp-eta-app
+        app: bankingappimg
     spec:
       containers:
-      - name: bankapp-eta-container
-        image: loksaieta/bankapp-eta-app
+      - name: bankingappimg-container
+        image: shadab55/bankingappimg
         ports:
         - containerPort: 8082
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: bankapp-eta-np-service
+  name: bankingappimg-np-service
   labels:
-    app: bankapp-eta-app
+    app: bankingappimg
 spec:
   selector:
-    app: bankapp-eta-app
+    app: bankingappimg
 
   type: NodePort
   ports:
